Add support for managing channels via admin api
