# src/api/admin/v1/mappers/index.js
@@ -1,5 +1,7 @@
 const auth = require('./auth');
 const authList = require('./auth-list');
+const channel = require('./channel');
+const channelList = require('./channel-list');
 const realm = require('./realm');
 const realmList = require('./realm-list');
 const user = require('./user');
@@ -11,6 +13,8 @@ const userList = require('./user-list');
 module.exports = {
   auth,
   authList,
+  channel,
+  channelList,
   realm,
   realmList,
   user,
